fix content outline dark mode

--- a/assets/src/components/resource/editors/ContentOutline.modules.scss
+++ b/assets/src/components/resource/editors/ContentOutline.modules.scss
@@ -1,130 +1,142 @@
 @use 'authoring/theme' as authoring;
 
-:global(html.authoring) {
-  .contentOutlineContainer {
-    position: relative;
-    width: 0px;
+.contentOutlineContainer {
+  position: relative;
+  width: 0px;
 
-    transition: width 200ms ease-out;
+  transition: width 200ms ease-out;
+}
+
+.contentOutlineContainerShow {
+  margin-top: 20px;
+  margin-right: 10px;
+  width: 300px;
+}
+
+.contentOutlineToggle {
+  position: absolute;
+  top: 100px;
+  left: -15px;
+  border: none;
+}
+
+.contentOutlineToggleSticky {
+  position: sticky;
+  top: 100px;
+  left: -15px;
+}
+
+.contentOutlineToggleButton {
+  width: 30px;
+  height: 30px;
+  color: authoring.$gray-600;
+  font-size: 16px;
+  font-weight: 800;
+  border: 2px solid authoring.$gray-400;
+  border-radius: 50%;
+  background: authoring.$body-bg;
+  padding: 0 1px 0 0;
+  cursor: pointer;
+
+  &:hover {
+    color: authoring.$selection;
+    border-color: authoring.$selection;
   }
+}
 
-  .contentOutlineContainerShow {
-    margin-top: 20px;
-    margin-right: 10px;
-    width: 300px;
+:global(html.authoring.dark) .contentOutlineToggleButton {
+  border-radius: 50%;
+}
+
+.contentOutline {
+  position: sticky;
+  top: 80px;
+  border-radius: 6px;
+  border: 4px solid authoring.$gray-200;
+  background: authoring.$gray-200;
+}
+
+:global(html.authoring.dark) .contentOutline {
+  border-radius: 6px;
+  border-color: authoring.$gray-800;
+  background: authoring.$gray-800;
+}
+
+.contentOutlineItems {
+  overflow: auto;
+}
+
+.header {
+  padding: 4px;
+}
+
+.headerButton {
+  border: none;
+  border-radius: 4px;
+  color: authoring.$body-color;
+
+  &:hover {
+    background: authoring.$gray-400;
   }
+}
 
-  .contentOutlineToggle {
-    position: absolute;
-    top: 100px;
-    left: -15px;
-    border: none;
+:global(html.authoring.dark) .headerButton {
+  border-radius: 4px;
+  background: authoring.$gray-800;
+
+  &:hover {
+    background: authoring.$gray-900;
   }
+}
 
-  .contentOutlineToggleSticky {
-    position: sticky;
-    top: 100px;
-    left: -15px;
+.item {
+  display: flex;
+  flex-direction: row;
+  padding: 6px 12px;
+  border-radius: 4px;
+  background: authoring.$body-bg;
+  height: 60px;
+  margin-bottom: 4px;
+  cursor: pointer;
+
+  &:last-child {
+    margin-bottom: 0;
   }
+}
 
-  .contentOutlineToggleButton {
-    width: 30px;
-    height: 30px;
-    color: authoring.$gray-600;
-    font-size: 16px;
-    font-weight: 800;
-    border: 2px solid authoring.$gray-400;
-    border-radius: 50%;
-    background: authoring.$body-bg;
-    padding: 0 1px 0 0;
-    cursor: pointer;
+.icon {
+  border-radius: 6px;
+  padding: 4px;
+  width: 32px;
+  height: 32px;
+  flex-shrink: 0;
+  text-align: center;
+  margin-top: 10px;
+  margin-right: 10px;
+  background-color: authoring.$gray-200;
+  border: 2px solid authoring.$gray-400;
 
-    &:hover {
-      color: authoring.$selection;
-      border-color: authoring.$selection;
-    }
+  :global i {
+    vertical-align: text-top;
   }
+}
 
-  .contentOutline {
-    position: sticky;
-    top: 80px;
-    border-radius: 6px;
-    border: 4px solid authoring.$gray-200;
-    background: authoring.$gray-200;
-  }
+.description {
+  display: block;
+  overflow: hidden;
+}
 
-  :global(&.dark) .contentOutline {
-    border-color: authoring.$gray-800;
-    background: authoring.$gray-800;
-  }
+.title {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-weight: 600;
+  font-size: 14px;
+}
 
-  .contentOutlineItems {
-    overflow: auto;
-  }
-
-  .header {
-    padding: 4px;
-  }
-
-  .headerButton {
-    border: none;
-    border-radius: 4px;
-    color: authoring.$body-color;
-
-    &:hover {
-      background: authoring.$gray-400;
-    }
-  }
-
-  .item {
-    display: flex;
-    flex-direction: row;
-    padding: 6px 12px;
-    border-radius: 4px;
-    background: authoring.$body-bg;
-    height: 60px;
-    margin-bottom: 4px;
-    cursor: pointer;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  .icon {
-    border-radius: 6px;
-    padding: 4px;
-    width: 32px;
-    height: 32px;
-    flex-shrink: 0;
-    text-align: center;
-    margin-top: 10px;
-    margin-right: 10px;
-    background-color: authoring.$gray-200;
-    border: 2px solid authoring.$gray-400;
-
-    :global i {
-      vertical-align: text-top;
-    }
-  }
-
-  .description {
-    display: block;
-    overflow: hidden;
-  }
-
-  .title {
-    display: block;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    font-weight: 600;
-    font-size: 14px;
-  }
-
-  .descriptionContent {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
+.descriptionContent {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
